values/generators/immutable/internal/generate/testdata/data/good/ScalarOnly_immutable.go
// Code generated by immutable tool. DO NOT EDIT.

package data

import (
	"fmt"
)

// ImScalarOnly is an immutable version of ScalarOnly.
// ScalarOnly has only scalar fields so the generated immutable type must not import the immutable package.
type ImScalarOnly struct {
	id      uint64
	name    string
	email   string
	private string
}

// GetID retrieves the content of the field ID.
func (r *ImScalarOnly) GetID() uint64 {
	return r.id
}

// SetID returns a copy of the struct with the field ID set to the new value.
func (r *ImScalarOnly) SetID(value uint64) ImScalarOnly {
	n := copyImScalarOnly(*r)
	n.id = value
	return n
}

// GetName retrieves the content of the field Name.
func (r *ImScalarOnly) GetName() string {
	return r.name
}

// SetName returns a copy of the struct with the field Name set to the new value.
func (r *ImScalarOnly) SetName(value string) ImScalarOnly {
	n := copyImScalarOnly(*r)
	n.name = value
	return n
}

// GetEmail retrieves the content of the field Email.
func (r *ImScalarOnly) GetEmail() string {
	return r.email
}

// SetEmail returns a copy of the struct with the field Email set to the new value.
func (r *ImScalarOnly) SetEmail(value string) ImScalarOnly {
	n := copyImScalarOnly(*r)
	n.email = value
	return n
}

// Mutable converts the immutable struct back to the original mutable struct.
func (r *ImScalarOnly) Mutable() ScalarOnly {
	return ScalarOnly{
		ID:      r.id,
		Name:    r.name,
		Email:   r.email,
		private: r.private,
	}
}

// Immutable converts the mutable struct to the generated immutable struct.
func (r *ScalarOnly) Immutable() ImScalarOnly {
	return ImScalarOnly{
		id:      (r.ID),
		name:    (r.Name),
		email:   (r.Email),
		private: (r.private),
	}
}

func copyImScalarOnly(s ImScalarOnly) ImScalarOnly {
	return s
}

// String is a copy of the original method from ScalarOnly.
func (r *ImScalarOnly) String() string {
	return fmt.Sprintf("%+v", "ScalarOnly")
}
